7/3-ingress-whitelist.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-client-to-access-postgresql
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
    - ports:
        - port: 5432
      from:
        - podSelector:
            matchLabels:
              app: client
